--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,42 @@
-.App {
-  text-align: center;
+.wrapper-main {
+  width: 100%;
+  height: 1100px;
+  margin:0 auto;
+text-align: center;
+background-color: #1a1a1a;
+filter: opacity(.91);
 }
 
-.Nav-link {
-  padding: 2rem;
+.nav-bar {
+  display: flex;
+  height: 110px;
+  flex-flow: row nowrap;
+  width: 100vw;
+  justify-content: flex-end;
+  background-color: #000000;
+  filter: opacity(.85);
+}
+
+h1 {
+  color: #ffffff;
 }
 
 .nav-item {
-  margin-top: 1rem;
+height: 100%;
+width: 10%;
+text-align: center;
+}
+.nav-item:hover {
+  background-color:#ffffff;
+  color: #000000;
+}
+
+.nav-link {
+  height: 100%;
+  width: 100%;
+  margin-top: 17%;
+color: #ffffff;
+}
+.nav-link:hover {
+  color: #000000;
 }
