Update - add link component, finish day 1

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,17 @@ color: #ffffff;
 .nav-link:hover {
   color: #000000;
 }
+
+.component-display {
+  height: 100vh;
+  width: 60%;
+  margin: 0 auto;
+  padding-top: 5%;
+  display: flex;
+  justify-content: center;
+}
+
+.component-display h1 {
+font-size: 8rem;
+font-weight: 4;
+}
